<resources>
    <string name="app_name">Android29</string>
    <string name="album_name">Album Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_album">Create Album</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="add_photo">Add Photo</string>
    <string name="tag_name_prompt" />
    <string name="add_tag">Add Tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="no_tags">No tags</string>
    <string name="remove_tag_prompt" />
    <string name="move">Move</string>
</resources>