<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fullScreenImageView"
        android:layout_width="228dp"
        android:layout_height="224dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:contentDescription="Full-screen photo"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tagsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullScreenImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_tags"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addTagButton"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        android:onClick="showAddTagPopup"
        android:text="@string/add_tag" />

    <Button
        android:id="@+id/removeTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="240dp"
        android:text="@string/remove_tag" />

    <Button
        android:id="@+id/slideshowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/removeTagButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Slideshow"
        android:onClick="startSlideshow"/>

</RelativeLayout>
